[package]
name = "mhash"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["maboroshinokiseki"]
description = "A simple file hashing tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmhash = { version = "0.2.0", features = ["alter-impl"] }
anyhow = "1.0.75"
bytesize = "1.2.0"
chrono = "0.4.26"
clap = { version = "4.3.23", features = ["derive"] }
crossbeam-channel = "0.5.8"
hex = "0.4.3"
kdam = { version = "0.4.0", features = ["template", "unicode"] }
lazy_static = "1.4.0"
num_cpus = "1.16.0"
regex = "1.9.3"
terminal_size = "0.2.6"
walkdir = "2.3.3"

[build-dependencies]
clap = { version = "4.3.23", features = ["derive"] }
clap_complete = "4.3.2"

[package.metadata.deb]
name = "m-hash"
assets = [
    [
        "target/release/mhash",
        "usr/bin/",
        "755",
    ],
    [
        "complete/mhash.bash",
        "usr/share/bash-completion/completions/mhash",
        "644",
    ],
    [
        "complete/mhash.zsh",
        "usr/share/zsh/site-functions/_mhash",
        "644",
    ],
    [
        "complete/mhash.fish",
        "usr/share/fish/completions/mhash.fish",
        "644",
    ],
]

[package.metadata.generate-rpm]
name = "m-hash"
assets = [
    { source = "target/release/mhash", dest = "/usr/bin/mhash", mode = "755" },
    { source = "complete/mhash.bash", dest = "/usr/share/bash-completion/completions/mhash", mode = "644" },
    { source = "complete/mhash.zsh", dest = "/usr/share/zsh/site-functions/_mhash", mode = "644" },
    { source = "complete/mhash.fish", dest = "/usr/share/fish/completions/mhash.fish", mode = "644" },
]
